<resources>
    <string name="app_name">Proyecto-DAM-tarea01</string>
    <string name="MATRICULA">MATRICULA</string>
    <string name="ALUMNO">ALUMNO</string>
    <string name="ESCUELA">ESCUELA</string>
    <string name="alumno">ALUMNO</string>
    <string name="escuela">ESCUELA</string>
    <string name="gastos_adicionales">GASTOS ADICIONALES</string>
    <string name="carnet_biblioteca">Carnet Biblioteca</string>
    <string name="carnet_medio_pasaje">Carnet Medio Pasaje</string>
    <string name="n_mero_de_cuotas">NÚMERO DE CUOTAS</string>
    <string name="costo_carrera">COSTO CARRERA</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="textview">TextView</string>
    <string name="s">S/.</string>
    <string name="pensi_n">PENSIÓN</string>
</resources>